# lm-watermark-lab

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .grype.yaml  .hadolint.yaml  .pre-commit-config.yaml  .releaserc.json  .syft.yaml  .trivyignore  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Makefile  PERFORMANCE.md  PRODUCTION_DEPLOYMENT_READY.md  PROJECT_CHARTER.md  README.md  RESEARCH_IMPLEMENTATION_GUIDE.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  RESEARCH_PAPER.md  RESEARCH_PUBLICATION.md  SDLC_ENHANCEMENT_SUMMARY.md  SDLC_IMPLEMENTATION_SUMMARY.md  (+51 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  branch-protection.json  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_report.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
.terragon/: autonomous-executor.py  execution-metrics.json  setup-autonomous-cron.sh  value-config.yaml  value-discovery-engine.py
autonomous_research_results/: AUTONOMOUS_RESEARCH_VALIDATION_REPORT.md  autonomous_research_results.json
compliance_data/gdpr/: data_subjects.json  processing_records.json
comprehensive_research_results/: COMPREHENSIVE_RESEARCH_VALIDATION_REPORT.md  comprehensive_research_results.json
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  RELEASE_PROCESS.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 000-adr-template.md  001-architecture-decisions.md
docs/runbooks/: incident-response.md  monitoring-runbook.md
docs/workflows/: README.md  SETUP_GUIDE.md  cd.yml  maintenance.yml  mutation-testing.md  sbom-generation.md
docs/workflows/examples/: advanced-ci.yml  deployment-pipeline.yml
kubernetes/: deployment.yaml
monitoring/: advanced-alerting.yml  alertmanager.yml  alerts.yml  docker-compose.monitoring.yml  otel-config.yaml  prometheus.yml
monitoring/grafana/dashboards/: watermark-lab-overview.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
performance/: profiling-config.yaml
research_validation_results/: COMPREHENSIVE_RESEARCH_VALIDATION_REPORT.md  comprehensive_validation_results.json
scripts/: check_licenses.py  collect_metrics.py  dependency_update.py  deploy.sh  health_check.py  maintenance.py  performance_analysis.py  release.sh  repository_maintenance.py  setup_workflows.sh
src/watermark_lab/: __init__.py
src/watermark_lab/api/: __init__.py  enhanced_endpoints.py  main.py  simple_endpoints.py
src/watermark_lab/cli/: __init__.py  main.py
src/watermark_lab/config/: __init__.py  models.py  settings.py
src/watermark_lab/core/: __init__.py  attacks.py  benchmark.py  detector.py  enhanced_integration.py  evaluation.py  factory.py  quantum_planner.py
src/watermark_lab/deployment/: __init__.py  auto_scaler.py  global_orchestrator.py  load_balancer.py
src/watermark_lab/i18n/: __init__.py  compliance.py  translator.py
src/watermark_lab/i18n/locales/: de.json  es.json  fr.json  ja.json  zh.json
src/watermark_lab/methods/: __init__.py  base.py  kirchenbauer.py  robust_base.py  robust_kirchenbauer.py
src/watermark_lab/monitoring/: __init__.py  comprehensive_monitoring.py  health_monitor.py  realtime_analytics.py  robust_monitoring.py
src/watermark_lab/neural/: __init__.py  trainer.py
src/watermark_lab/optimization/: __init__.py  adaptive_scaling.py  auto_scaling.py  caching.py  concurrent_processing.py  distributed_processing.py  performance_cache.py  performance_optimizer.py  quantum_performance.py  resource_manager.py  ultra_performance.py
src/watermark_lab/research/: __init__.py  advanced_experimental_suite.py  comparative_study.py  experimental_framework.py  novel_algorithms.py  publication_prep.py  reproducibility.py  statistical_analysis.py
src/watermark_lab/security/: __init__.py  advanced_security.py  audit_logging.py  authentication.py  encryption.py  input_sanitization.py  quantum_security.py  rate_limiting.py  robust_security.py  threat_detection.py
src/watermark_lab/streaming/: __init__.py  stream_processor.py
src/watermark_lab/utils/: __init__.py  advanced_error_handling.py  backup_recovery.py  cache.py  circuit_breaker.py  data_integrity.py  enhanced_model_loader.py  enhanced_resilience.py  exceptions.py  fallback_imports.py  logging.py  metrics.py  model_loader.py  optimization.py  parallel.py  retry.py  validation.py
src/watermark_lab/validation/: quality_assurance.py
src/watermark_lab/visualization/: __init__.py  plotter.py
tests/: conftest.py  test_enhanced_generation2.py  test_enhanced_generation3.py  test_generation1_basic.py
tests/contract/: test_api_contracts.py  test_consumer_pacts.py
tests/fixtures/: __init__.py  sample_configs.yaml  sample_texts.json
tests/integration/: test_api.py
tests/performance/: test_benchmarks.py
tests/smoke/: test_health.py
tests/unit/: test_detection.py  test_watermarking.py
workflow-templates/: README.md  ci.yml.txt
